--- a/presentation/website.html
+++ b/presentation/website.html
@@ -97,7 +97,9 @@
                 <p>The algorithm uses a combination of data sources, including government databases and external data providers. However, the <strong>quality and accuracy of this data are not publicly disclosed</strong>, which raises questions about the reliability of the system's outputs.</p>
                 <p>There are <strong>54 variables based on subjective assessments</strong> made by <strong>caseworkers</strong>, and any bias by the caseworker would reflect in the data.</p>
                 <p>Only <strong>52 young welfare recipients</strong> were included instead of <strong>880</strong>, causing the algorithm to wrongly associate younger individuals with higher fraud risk.</p>
-                <p>Caseworkers' comments are treated as <strong>binary</strong>, so both positive and negative comments equally impact the risk score.</p>
+                <p>Caseworkers' comments are treated as <strong>binary</strong>, so both positive and negative comments equally impact the risk score. <br> Example: <strong>'shows no motivation'</strong> and <strong>'shows motivation'</strong>⮕ <strong>'1'</strong>
+                </p>
+                <p></p>
             </div>
         </div>
     </section>
