authors and conclusion

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -426,9 +426,19 @@
        
     </section>
     
-    <footer class="takeaway">
+    <section class="takeaway">
         <h2>Our Big Takeaway</h2>
         <p>Building fair algorithms means balancing performance with fairness. Let’s stop letting black-box models make unchecked decisions and start designing AI systems that serve <em>everyone</em> equitably.</p>
+    </section>
+
+    <footer>
+        <div class="authors">
+            <p>Ana Azevedo</p>
+            <p>Diogo Silva</p>
+            <p>Félix Martins</p>
+            <p>Francisco Campos</p>
+            <p>João Figueiredo</p>
+        </div>
     </footer>
 
     <script src="script.js"></script>
