Final changes in my part

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -115,11 +115,13 @@
                 </div>
                 <div class="carousel-slide">
                     <h2>Discrimination</h2>
-                    <p>The system <strong>intensified existing biases</strong>, disproportionately scrutinizing low-income individuals, especially immigrants with language barriers, leading to increased societal inequalities.</p>
+                    <p>The system <strong>intensified existing biases</strong>, disproportionately scrutinizing low-income individuals, leading to increased societal inequalities.</p>
+                    <p>The system also contained <strong>proxy variables</strong> that indirectly reflected ethnical backgrounds, such as <strong>Dutch Fluency</strong>.</p>
                 </div>
                 <div class="carousel-slide">
                     <h2>Transparency</h2>
                     <p>The model operated as a "black box," leaving <strong>individuals flagged for investigation without an explanation of why they were chosen</strong>, which led to a lack of understanding and the inability to challenge the decisions.</p>
+                    <p>Prossecutors relied heavily on the system's output, leading to <strong>lack of detailed investigations</strong> and implied a <strong>blind trust of SyRI</strong>.</p>
                 </div>
                 <div class="carousel-slide">
                     <h2>Accountability</h2>
@@ -428,7 +430,7 @@
     
     <section class="takeaway">
         <h2>Our Big Takeaway</h2>
-        <p>Building fair algorithms means balancing performance with fairness. Let’s stop letting black-box models make unchecked decisions and start designing AI systems that serve <em>everyone</em> equitably.</p>
+        <p>Building fair algorithms means balancing performance with <strong>fairness</strong> and <strong>transparency</strong>. Let’s stop letting black-box models make unchecked decisions and start designing AI systems that serve <em>everyone</em> equitably.</p>
     </section>
 
     <footer>
