Added link to github repo in website

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -12,6 +12,7 @@
     <header class="hero">
         <h1>Inside the Suspicious Machine</h1>
         <p>Unpacking Rotterdam's Algorithmic Rollercoaster</p>
+        <p><a class="github-link" href="https://github.com/Francis802/RotterdamAlgorithms">GitHub Repository</a></p>
     </header>
 
     <section class="scene">
