Fixed small typo

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -370,7 +370,7 @@
         <p>
             According to the Trustworthy AI guidelines, AI systems should be transparent and fair. 
             Decisions need to be explained in an understandable manner to humans.
-            For this purpose, LIME (Local Interpretable Model-Agnostic Explanations) and SHAP (SHapley Additive eXplanations)
+            For this purpose, LIME (Local Interpretable Model-Agnostic Explanations) and SHAP (SHapley Additive exPlanations)
             can be used to improve the explainability of any given model.
         </p>
     
